fix paragraph wrapping

--- a/src/components/analysis/analysis.css
+++ b/src/components/analysis/analysis.css
@@ -20,7 +20,7 @@
   width: min(28vw, 350px);
 }
 
- .selector-panel {
+.selector-panel {
   display: flex;
   justify-content: space-between;
   padding-left: 4px;
@@ -40,9 +40,11 @@
   width: 80%;
   padding-top: 0px;
 }
+
 .selector-panel-select-button:hover {
   opacity: 0.7;
 }
+
 .final-molecule-bar .help-button {
   background-color: #fdfbfb;
   border-radius: 12px;
@@ -60,7 +62,7 @@
   width: 80%;
 }
 
-.final-molecule-bar .molecule-widget > .molecule img {
+.final-molecule-bar .molecule-widget>.molecule img {
   width: 80%;
 }
 
@@ -115,25 +117,28 @@
   justify-content: right;
   width: flex;
 }
-.plot-button button{
-    display: flex;
-    background-color: #212529;
-    color: white;
-    border: none;
-    border-radius: 10px;
-    height: flex;
-    width: flex;
-    flex-direction: row;
-    justify-content: center;
-    font-size: 16px;
-    margin: 2px;
-    padding: 10px;
-    padding-bottom: 15px;
+
+.plot-button button {
+  display: flex;
+  background-color: #212529;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  height: flex;
+  width: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 16px;
+  margin: 2px;
+  padding: 10px;
+  padding-bottom: 15px;
 
 }
+
 .plot-button:hover {
   opacity: 0.7;
 }
+
 .plot-button-row {
   margin-bottom: 1vh;
   display: flex;
@@ -143,7 +148,7 @@
   justify-content: right;
 }
 
-.plot-button-row button{
+.plot-button-row button {
   background-color: #212529;
   color: white;
   border: none;
@@ -153,6 +158,7 @@
   width: 4.3vw;
   font-size: min(1vw, 16px);
 }
+
 .comparison-graph:hover {
   opacity: 1;
 }
@@ -161,22 +167,24 @@
   background-color: white;
   opacity: 1;
 }
-.plot-button-row  button:active {
+
+.plot-button-row button:active {
   opacity: 1;
 }
+
 .plot-button-row button:hover {
   opacity: 0.7;
 }
 
-.plot-button-row > .inactivebutton button {
+.plot-button-row>.inactivebutton button {
   background-color: #212529;
 }
 
-.plot-button-row > .activebutton button {
+.plot-button-row>.activebutton button {
   background-color: green;
 }
 
-.show-hover > .molecule img {
+.show-hover>.molecule img {
   border: 1px solid rgb(12, 10, 10);
   width: 120px;
   z-index: 3;
@@ -203,7 +211,7 @@
   text-decoration: none;
 }
 
-p {
-    padding-left: 0;
-    white-space: nowrap;
+.plot-button-row>p {
+  padding-left: 0;
+  white-space: nowrap;
 }
